# rua

./: Cargo.toml  build.rs
res/wrapper/: security-wrapper.sh
src/: action_install.rs  action_search.rs  action_upgrade.rs  aur_rpc_utils.rs  cli_args.rs  main.rs  pacman.rs  rua_environment.rs  rua_paths.rs  srcinfo_to_pkgbuild.rs  tar_check.rs  wrapped.rs
